# set-money-betboom

./: .env.example  .gitignore  Config.py  README.MD  main.py  pyproject.toml
pages/: BetListPage.py  LoginPage.py  MatchPage.py
